# pulse-app-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  application.c  application.h  pa.c  sink.c  sink.h
